--- a/index2.html
+++ b/index2.html
@@ -48,9 +48,9 @@ function myFunction() {
               <h5 class="masthead-brand">Nicolas Nollomont</h5>
               <nav>
                 <ul class="masthead-nav">
-                  <li><a href="http://charlesmansion.github.io/index.html">Accueil</a></li>
-                  <li><a href="http://charlesmansion.github.io/index3.html">Pourquoi m'engager?</a></li>
-                  <li class="active"><a href="http://charlesmansion.github.io/index2.html">CV</a></li>
+                  <li><a href="index.html">Accueil</a></li>
+                  <li><a href="index3.html">Pourquoi m'engager?</a></li>
+                  <li class="active"><a href="index2.html">CV</a></li>
                   
                   
                 </ul>
