--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           </div>
 
           <div class="inner cover faded">
-            <h1 class="cover-heading fade-in">Besoin de renfort pour vos futures idées?</h1>
+            <h1 class="cover-heading fade-in mb-5">Besoin de renfort pour vos futures idées?</h1>
             <h4 class="fade-in2">Je crois pouvoir vous être utile.</h4>
             
             <!--   <h4 class="fade-in3"><br>Let's make a difference,<strong> together</strong>. <br> Hire <strong><em>me</em></strong> as <strong>digital marketing manager</strong>!</h4> -->
