--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <a href="https://www.flickr.com/photos/-mrgt-/">Margot Gabel</a>
        </p>
        </footer>
-        </div>>
+        </div>
       </div>
 
     </div>
