--- a/index3.html
+++ b/index3.html
@@ -37,9 +37,9 @@
               <h5 class="masthead-brand">Nicolas Nollomont</h5>
               <nav>
                 <ul class="masthead-nav">
-                  <li><a href="index.html">Accueil</a></li>
-                  <li class="active"><a href="index3.html">Pourquoi moi?</a></li>
-                  <li><a href="index2.html">CV</a></li>
+                  <li><a class="nava" href="index.html">Accueil</a></li>
+                  <li class="active nava"><a href="index3.html">Pourquoi moi?</a></li>
+                  <li><a class="nava" href="index2.html">CV</a></li>
                   
                 </ul>
               </nav>
