--- a/index2.html
+++ b/index2.html
@@ -79,10 +79,10 @@ function myFunction() {
             <a class="nav-link js-scroll-trigger" href="#education">Education</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
+            <a class="nav-link js-scroll-trigger" href="#skills">Compétences</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
+            <a class="nav-link js-scroll-trigger" href="#interests">Intérêts</a>
           </li>
           <li class="nav-item">
            <!--  <a class="nav-link js-scroll-trigger" href="#awards">Awards</a> -->
@@ -101,7 +101,7 @@ function myFunction() {
           <div class="subheading mb-5">1000 Bruxelles
             <a href="mailto:nicolasnollomont@gmail.com nicolas.nollomont@pias.com">nicolasnollomont@gmail.com</a>
           </div>
-          <p class="mb-5">Passionné de musique et de nouvelles technologies, on me décrit souvent comme une personne à l'esprit créatif, indépendant et travaillant dur. Au-delà de mes solides connaissances en web-design et graphisme, je possède également un Master en Relations Publiques et ai déjà eu l'occasion de travailler plus de 2 ans et demi dans l'industrie de la musique. Aujourd'hui, je suis plus que jamais prêt à amener ma carrière professionnelle au niveau supérieur.
+          <p class="mb-5">Passionné de musique et de nouvelles technologies, on me décrit souvent comme une personne à l'esprit créatif, indépendant et travaillant dur. Au-delà de mes solides connaissances en web-design et graphisme, je possède également un Master en Relations Publiques, et j'ai déjà eu l'occasion de travailler plus de 2 ans et demi dans l'industrie de la musique. Aujourd'hui, je suis plus que jamais prêt à amener ma carrière professionnelle au niveau supérieur.
           </p>
           <ul class="list-inline list-social-icons mb-0">
             <li class="list-inline-item list-social-icon1">
@@ -153,7 +153,7 @@ function myFunction() {
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Front Office & Record Store Manager <br> Graphic Designer</h3>
               <div class="subheading mb-3"><a href="http://www.pias.com"  target="_blank">[PIAS] Belgium</a></div>
-              <p>Evoluant maintenant depuis 2015 chez [PIAS], j'ai initialement débuté en tant que Front Office Manager, après un stage effectué dans le département promo du label. Tandis que diverses activités ont commencé à se développer autour des nouveaux locaux de la société, je me suis vu confier la responsabilité de la gestion du magasin de disques, venant alors d'ouvrir. Je consacre également depuis le début de mes fonction environ un tiers de mon temps à concevoir divers projets visuels avec les équipes promo/marketing.</p>
+              <p>Evoluant maintenant depuis 2015 chez [PIAS], j'ai initialement débuté en tant que Front Office Manager, après un stage effectué dans le département promo du label. Tandis que diverses activités ont commencé à se développer autour des nouveaux locaux de la société, je me suis vu confier la responsabilité de la gestion du magasin de disques, venant alors d'ouvrir. Je consacre également, depuis le début de mes fonctions, environ un tiers de mon temps à concevoir divers projets visuels avec les équipes promo/marketing.</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">Septembre 2015 - Présent</span>
@@ -173,7 +173,7 @@ function myFunction() {
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0"> MUSIC REPORTER <br> PHOTOGRAPHER</h3>
+              <h3 class="mb-0"> Music Reporter <br> Photographer</h3>
               <div class="subheading mb-3"><a href="http://lavagueparallele.com/"  target="_blank">La Vague Parallèle</a></div>
               <p>Sur mon temps libre, je réalise aussi depuis quelques années de nombreuses chroniques, live reports, reportages photos et interviews vidéos avec différents artistes pour le magazine.</p>
             </div>
@@ -184,7 +184,7 @@ function myFunction() {
 
           <div class="resume-item d-flex flex-column flex-md-row">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">STUDENT GUIDE</h3>
+              <h3 class="mb-0">Guide Etudiant</h3>
               <div class="subheading mb-3"><a href="http://www.outdoor-centre.be/en" target="_blank">Outdoor Centre</a></div>
               <p>Outdoor Centre est une société active dans l'organisation de sports d'aventure et d'extérieur en pleine nature. En tant que jobiste, j'ai travaillé comme membre de l'équipe s'occupant de l'accueil et de l'accompagnement des visiteurs, où j'ai pu apprendre à pratiquer mon néérlandais et mon anglais sur base quotidienne pendant plusieurs années. </p>
             </div>
@@ -225,7 +225,7 @@ function myFunction() {
               <h3 class="mb-0"><a href="https://uclouvain.be/fr/index.html" target="_blank">Université Catholique de Louvain</a></h3>
               <div class="subheading mb-3">Bachelier en Information & Communication</div>
               <div>
-                <p>Avec spécialisations en :: <br>
+                <p>Avec spécialisations en : <br>
                 <ul class="list-left">
                   <li>Musicologie</li>
                 </ul>
@@ -243,7 +243,7 @@ function myFunction() {
               <h3 class="mb-0"><a href="https://saintlaurent.enseignementlibremarche.be/presentation/" target="_blank">ELMA - Inst. Saint-Laurent Marche </a></h3>
               <div class="subheading mb-3">CESS</div>
               <div>
-                <p>Avec spécialisation en : <br>
+                <p>Avec spécialisations en : <br>
                 <ul class="list-left">
                   <li>Immersion Anglais (Sciences, Géographie, Histoire)</li>
                   <li>Langues (Anglais, Néérlandais, Allemand, Espagnol)</li>
@@ -259,8 +259,8 @@ function myFunction() {
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="skills">
         <div class="my-auto">
-          <h2 class="mb-5">Skills</h2>
-          <h4 class="skill mb-0"> Relation Publiques & Digital Marketing</h4>
+          <h2 class="mb-5">Compétences</h2>
+          <h4 class="skill mb-0"> Relations Publiques & Digital Marketing</h4>
           <br>
           <div class="workflow">
           <ul class="fa-ul mb-0 workflow-ul">
@@ -275,7 +275,7 @@ function myFunction() {
           <br>
           <br>
 
-          <div class="subheading mb-3 skill">Connaissances des médias, nouveaux comme traditionnels</div>
+          <div class="subheading mb-3 skill">Connaissance des médias, nouveaux comme traditionnels</div>
           <div class="progress">
           <div class="progress-bar progress-bar-striped progress-bar-animated progress-barey4" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 80%"></div></div>
           <br>
@@ -394,10 +394,11 @@ function myFunction() {
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
         
           <h2 class="mb-5">Intérêts</h2>
-          <p>Au-delà de mon travail, je passe la majeure partie de mon temps autour de la musique. Quand je ne suis pas en train d'écouter les nouveautés du moment ou en concert, je développe mon propre projet musical,<a href="https://www.facebook.com/whateverisaband/?ref=br_tf>" target="_blank"><strong>WHATEVER!</strong></a>, avec lequel nous venons de signer notre premier album en collaboration avec <a href="https://http://www.62tvrecords.com/>" target="_blank"><strong>62TV Records</strong></a>. Curieux? <br>Voici un aperçu de ce que l'on fait :</p>
+          <p>Au-delà de mon travail, je passe la majeure partie de mon temps autour de la musique. Quand je ne suis pas en concert ou en train d'écouter les nouveautés du moment, je développe mon propre projet musical,<a href="https://www.facebook.com/whateverisaband/?ref=br_tf>" target="_blank"><strong>WHATEVER!</strong></a>, avec lequel nous venons de signer notre premier album en collaboration avec <a href="https://http://www.62tvrecords.com/>" target="_blank"><strong>62TV Records</strong></a>. Curieux? <br>Voici un aperçu de ce que l'on fait :</p>
           <div class="iframebox"><div class="embed-responsive embed-responsive-16by9""><iframe width="560" height="315" src="https://www.youtube.com/embed/D_YP2y-tM5M" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen align="middle"></iframe></div></div>
           <br>
-          <p class="mb-0"></p>J'aime aussi le cinéma, les voyages, et apprendre de nouvelles choses pour étendre ma créativité, comme le graphisme ou le web-development que j'ai appris de façon autodidacte.
+          <p class="mb-0"></p>J'aime aussi le cinéma, les voyages, et apprendre tous les jours de nouvelles choses pour étendre ma créativité, comme le graphisme ou le web-development que j'ai appris de façon autodidacte.
+         
       </section>
 
     <!--   <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="awards">
