--- a/index3.html
+++ b/index3.html
@@ -111,7 +111,7 @@
 
       </section>
 <h2 class="mb-0 myh2">N'attendez pas plus.</span></h2>
-          <form action="mailto:nicolasnollomont@gmail.com, nicolas.nollomont@pias.com" class="button-wrapper2 mb-5">
+          <form action="mailto:nicolasnollomont@gmail.com" class="button-wrapper2 mb-5">
                       <input type="submit" value="ENGAGEZ-MOI MAINTENANT" class="btn btn-xl btn-primary mybutton fade-in4 ">
                     </div>
                   </form>
